--- a/Escola/Escola/Pages/Editar.cshtml
+++ b/Escola/Escola/Pages/Editar.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 
-<form asp-page="/Editar" method="post">
+<form asp-page="/Editar" method="post" data-ajax="true" data-ajax-method="post" data-ajax-success="Sucesso" data-ajax-failure="Falha">
 
     <input type="hidden" asp-for="Id" />
 
