--- a/Escola/Escola/Pages/Index.cshtml
+++ b/Escola/Escola/Pages/Index.cshtml
@@ -1,9 +1,9 @@
-﻿
+﻿@page
+@model Escola.Pages.IndexModel
 @{
-    ViewData["Title"] = "Index";
 }
 
-<link rel="stylesheet" href="~/css/login-page.css"/>
+<link rel="stylesheet" href="~/css/login-page.css" />
 
 <div class="container-fluid ps-md-0">
     <div class="row g-0">
@@ -15,7 +15,7 @@
                         <div class="col-md-9 col-lg-8 mx-auto">
                             <h3 class="login-heading mb-4">Seja Bem-Vindo!</h3>
 
-                            <form asp-controller="Login" asp-action="Logar" method="post">
+                            <form asp-page="/Index" asp-page-handler="Logar" method="post" data-ajax="true" data-ajax-method="post" data-ajax-success="Sucesso" data-ajax-failure="Falha">
                                 <div class="form-floating mb-3">
                                     <input type="text" id="nome" name="nome" class="form-control" placeholder="Digite seu nome">
                                 </div>
@@ -42,4 +42,5 @@
         </div>
     </div>
 </div>
+
 
